// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blank InputField renders correctly 1`] = `
<div>
  <p />
  <input
    defaultValue="N/A"
    min="N/A"
    required={true}
  />
</div>
`;

exports[`InputField renders correctly 1`] = `
<div>
  <p>
    Header
  </p>
  <input
    defaultValue="None"
    min="None"
    name="name"
    required={true}
    type="text"
  />
</div>
`;

exports[`InputField with just one of each prop renders correctly 1`] = `
<div>
  <p>
    Header
  </p>
  <input
    defaultValue="N/A"
    min="N/A"
    required={true}
  />
</div>
`;

exports[`InputField with just one of each prop renders correctly 2`] = `
<div>
  <p />
  <input
    defaultValue="N/A"
    min="N/A"
    name="name"
    required={true}
  />
</div>
`;

exports[`InputField with just one of each prop renders correctly 3`] = `
<div>
  <p />
  <input
    defaultValue="None"
    min="None"
    required={true}
    type="text"
  />
</div>
`;

exports[`PostListingDisplay renders correctly 1`] = `
<div
  id="make-a-listing-body"
>
  <div
    id="header"
  >
    <h1>
      Post a Listing
    </h1>
  </div>
  <form
    action="/listings"
    method="POST"
  >
    <div>
      <p>
        Title:
      </p>
      <input
        defaultValue="None"
        min="None"
        name="title"
        onChange={[Function]}
        required={true}
        type="text"
      />
    </div>
    <div>
      <p>
        Description:
      </p>
      <input
        defaultValue="None"
        min="None"
        name="description"
        onChange={[Function]}
        required={true}
        type="text"
      />
    </div>
    <div>
      <p>
        Total number of rooms in apartment:
      </p>
      <input
        defaultValue="0"
        min="0"
        name="numRooms"
        onChange={[Function]}
        required={true}
        type="number"
      />
    </div>
    <p>
      Number of rooms for rent:
    </p>
    <div
      id="singleInfo"
    >
      <div>
        <p>
          Singles:
        </p>
        <input
          defaultValue="0"
          min="0"
          name="numSingles"
          onChange={[Function]}
          required={true}
          type="number"
        />
      </div>
      <div>
        <p>
          Monthly Rent Per Single:
        </p>
        <input
          defaultValue="0"
          min="0"
          name="singlePrice"
          onChange={[Function]}
          required={true}
          type="number"
        />
      </div>
    </div>
    <div
      id="sharedInfo"
    >
      <div>
        <p>
          Shared:
        </p>
        <input
          defaultValue="0"
          min="0"
          name="numShared"
          onChange={[Function]}
          required={true}
          type="number"
        />
      </div>
      <div>
        <p>
          Monthly Rent Per Shared Room:
        </p>
        <input
          defaultValue="0"
          min="0"
          name="sharedPrice"
          onChange={[Function]}
          required={true}
          type="number"
        />
      </div>
    </div>
    <input
      name="listingPrice"
      type="hidden"
      value=""
    />
    <div>
      <p>
        Number of bathrooms:
      </p>
      <input
        defaultValue="0"
        min="0"
        name="numBathrooms"
        onChange={[Function]}
        required={true}
        type="number"
      />
    </div>
    <p>
      Lease type:
    </p>
    <select
      name="leaseTypes"
      onChange={[Function]}
      required={true}
      size="2"
    >
      <option
        value="YEAR_LONG"
      >
        Year-long
      </option>
      <option
        value="MONTH_TO_MONTH"
      >
        Month-to-Month
      </option>
    </select>
    <div>
      <p>
        Lease Start Date:
      </p>
      <input
        defaultValue="2020-28-06"
        min="2020-28-06"
        name="startDate"
        onChange={[Function]}
        required={true}
        type="date"
      />
    </div>
    <div>
      <p>
        Lease End Date:
      </p>
      <input
        defaultValue="2020-28-06"
        min="2020-28-06"
        name="endDate"
        onChange={[Function]}
        required={true}
        type="date"
      />
    </div>
    <input
      id="post-listing-button"
      type="submit"
      value="Post Listing"
    />
  </form>
</div>
`;
